my-app/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels: argocd.argoproj.io/instance: my-app
name: prod
