my-app/3-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nginx-ingress
    namespace: prod
  spec:
    ingressClassName: nginx
    rules:
    - host: nginx.ribas.ca
      http:
        paths:
        - backend:
            service:
              name: nginx-svc
              port:
                name: http
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.59.16
kind: List
metadata:
  resourceVersion: ""
